creating skeleton handler and openapi spec for fetch log endpoint (#1956)
* creating skeleton handler and openapi spec for fetch log endpoint

* adding authentication required to openapi spec

* updating template

* code review
