# docs/openapi.yaml
@@ -752,6 +752,52 @@ paths:
         responses: { }
         httpMethod: POST
         type: AWS_PROXY
+  /{publicationIdentifier}/log:
+    get:
+      operationId: fetchPublicationLog
+      summary: Fetch Publication log by identifier
+      parameters:
+        - in: path
+          name: publicationIdentifier
+          schema:
+            type: string
+          required: true
+          style: simple
+          explode: false
+          description: UUID identifier of the Publication to fetch Log for.
+      security:
+        - CognitoUserPool: [ 'https://api.nva.unit.no/scopes/backend', 'https://api.nva.unit.no/scopes/frontend','aws.cognito.signin.user.admin' ]
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${FetchPublicationLogFunction.Arn}/invocations
+        responses: {}
+        httpMethod: POST
+        type: AWS_PROXY
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PublicationLogResponse"
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Problem"
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Problem"
+        '502':
+          description: Bad Gateway
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
 
   /context:
     get:
@@ -1335,6 +1381,19 @@ components:
           type: string
           format: uri
           description: Shortened alias of the id, will return a redirect to the id.
+    PublicationLogResponse:
+      type: object
+      properties:
+        type:
+          type: string
+          example: "PublicationLog"
+        logEntries:
+          type: array
+          items:
+            $ref: '#/components/schemas/PublicationLogEntry'
+    PublicationLogEntry:
+      description: PublicationLogEntry
+      type: object
 #region content from "documentation/schema.yaml"
     AcademicArticle:
       required:
